--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ body {
   </head>
   <body>
 	<div class="container text-center">
-    		<img class=" media img-responsive"  id="imagem" src="https://goo.gl/8rrCtR" alt="Informações sobre Manutenção de Fevereiro">
+    		<img class=" media img-responsive"  id="imagem" src="https://goo.gl/CG6eor" alt="Informações sobre Manutenção de Fevereiro">
 	  <div id="mailto">
             <div id="button"><a id="button_text" href="mailto:contatos@intraview.com.br?cc=administrativo@intraview.com.br&bcc=produtos@intraview.com.br&Subject=Contato%20da%20Mala%20Manutenção%20de%20Fevereiro!" 
 target="_top">Contate-nos!</a></div>
